--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,12 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=BioRhyme&display=swap" rel="stylesheet">
-  
+  <style>
+    body{
+      background-color: black;
+      width: 100vw;
+    }
+  </style>
     <title>StreamPlex</title>
   </head>
   <body >
